# shutter-rust

./: .gitignore  Cargo.toml  README.md  meson.build  org.shutter-project.Shutter.json  org.shutter-project.ShutterRust.json  org.shutterproject.ShutterRust.json
.github/workflows/: run-tests.yml
data/: meson.build  org.shutter-project.Shutter.desktop.in  org.shutter-project.Shutter.gschema.xml  org.shutter-project.Shutter.metainfo.xml.in  org.shutter-project.ShutterRust.desktop.in  org.shutter-project.ShutterRust.gschema.xml  org.shutter-project.ShutterRust.metainfo.xml.in  org.shutterproject.ShutterRust.desktop.in  org.shutterproject.ShutterRust.gschema.xml  org.shutterproject.ShutterRust.metainfo.xml.in
data/credits/: copyright  dev
data/icons/: meson.build
po/: POTFILES  fr.po  meson.build  ru.po  shutter-rust.pot
src/: application.rs  editorwindow.rs  main.rs  meson.build  settings.rs  shutter-rust.gresource.xml  shutter.gresource.xml  window.blp  window.rs
src/gtk/: help-overlay.blp  menus.blp
