[package]
name = "shutter-rust"
version = "0.999.1"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_14"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
xdg = "2.5.2"
